# steam-game-quiz

./: README.md
aws_lambdas/: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.test.yaml  lambda_job_runner.py  pyproject.toml  test.env
aws_lambdas/daily_quiz/: config.py  lambda_func.py  protocols.py
aws_lambdas/daily_quiz/aws_lambda/: direct_lambda_api.py  event.py  lambda_api.py  model.py
aws_lambdas/daily_quiz/daily_quiz/: exception.py  game_picker.py  genre_picker.py  screenshot_scraper.py  serivce.py  utils.py
aws_lambdas/daily_quiz/steam/: steam_api.py  steampowered_api.py
aws_lambdas/database_lambda/: config.py  es.py  event.py  lambda_func.py  model.py  utils.py
aws_lambdas/database_lambda/alias/: model.py
aws_lambdas/database_lambda/game/: es.py  model.py  model_factory.py  repository.py  schema.py  service.py
aws_lambdas/database_lambda/genre/: model_factory.py
aws_lambdas/database_lambda/quiz/: exception.py  model.py  model_factory.py  schema.py  service.py
aws_lambdas/database_lambda/screenshot/: model_factory.py  schema.py  service.py
aws_lambdas/game_updater/: config.py  lambda_func.py  protocols.py
aws_lambdas/game_updater/aws_lambda/: direct_lambda_api.py  event.py  lambda_api.py  model.py
aws_lambdas/game_updater/igdb/: igdb_api.py  model.py
aws_lambdas/game_updater/scraper/: alias.py  alter_names.py  game.py  model.py  service.py
aws_lambdas/game_updater/steam/: gamalytic_api.py  model.py  steam_api.py
aws_lambdas/scripts/: build_daily_quiz_lambda.sh  build_database_lambda.sh  filter_games.py  reset_database.py  save_games.py  scrap_sex_steam_games.py  scrap_steam_games.py
aws_lambdas/tests/database_lambda/: conftest.py  database.py  es.py
backend/: .gitignore  .test.env  Dockerfile.dev  Dockerfile.prod  alembic.ini  docker-compose.dev.yaml  docker-compose.test.yaml  pyproject.toml  pytest.ini  requirements.txt
backend/migration/: env.py
backend/migration/versions/: 07a7ec136a04_0008_add_rank_score_field.py  5841362f64f7_0002_add_daily_quiz_table.py  5d90f00aa849_0004_add_game_alias_table.py  5ef83623bd0d_0003_add_daily_quiz_feature.py  78fda4736d78_0001_create_base_tables.py  cc7150130bcf_0006_game_alias_game_id_name_unique.py  d8e0e8e12a4a_0005_remove_game_kr_name_field.py  db66457957a9_0009_add_game_solved_table.py
backend/scripts/: dev_seed_db.py  dev_seed_es.py  dev_seed_quizzes.py
backend/src/: config.py  constants.py  database.py  dependency.py  es.py  exception.py  main.py  model.py  repository.py
backend/src/auth/: account.py  database.py  dependency.py  model.py  oauth2.py  repository.py  router.py  schema.py  user.py
backend/src/game/: dependency.py  exception.py  manager.py  model.py  repository.py  router.py  schema.py  service.py
backend/src/guest/: dependency.py  model.py  schema.py  service.py
backend/src/health/: router.py
backend/src/quiz/: daily_quiz_loader.py  dependency.py  exception.py  model.py  quiz_answer_service.py  quiz_manager.py  quiz_service.py  quiz_validator.py  repository.py  router.py  schema.py  service.py
backend/src/rank_score/: dependency.py  manager.py
backend/tests/: config.py  database.py
backend/tests/integration/: conftest.py  test_auth.py  test_game_auto_complete_name.py  test_quiz.py  test_quiz_answer.py  test_quiz_submit_answer.py
backend/tests/utils/: auth.py  database.py  es.py  game.py  quiz.py  screenshot.py  utils.py
data_scrapers/: .gitignore  pyproject.toml  pytest.ini
data_scrapers/daily_quiz/: config.py  lambda_func.py
data_scrapers/daily_quiz/aws_lambda/: exception.py  model.py
data_scrapers/daily_quiz/daily_quiz/: game_picker.py  genre_picker.py  serivce.py  utils.py
data_scrapers/daily_quiz/steam/: model.py
data_scrapers/database/: lambda_func.py
data_scrapers/database/game/: service.py
data_scrapers/database/screenshot/: repository.py
data_scrapers/database_lambda/: event.py  lambda_func.py
data_scrapers/database_lambda/game/: service.py
data_scrapers/database_lambda/quiz/: service.py
data_scrapers/game_updater/: lambda_func.py  protocols.py
data_scrapers/private/: config.py  database.py  lambda_func.py  model.py
data_scrapers/private/game/: model.py  (+2 more)
data_scrapers/public/: config.py  lambda_func.py  model.py  protocols.py
data_scrapers/scripts/: build_game_updater_lambda.sh  build_lambda_function.sh  build_private_lambda.sh  build_public_lambda.sh  drop_database.py  filter_games.py  reset_database.py  save_games.py  scrap_steam_games.py
data_scrapers/src/: config.py  database.py  lambda_function.py  main.py  model.py
data_scrapers/tests/: config.py  conftest.py  factories.py
(+134 files in other folders)
