[tool.poetry]
name = "aws-lambdas"
version = "3"
description = ""
authors = ["2jun0 <soo28819@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
sqlalchemy = "^2.0.23"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.1.0"
pymysql = "^1.1.0"
cryptography = "^41.0.7"
urllib3 = "^1"
pydantic = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
boto3 = "^1.34.1"
pytest-dotenv = "^0.5.2"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
experimental-string-processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''