[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["2jun0 <soo28819@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.23"
redis = "^5.0.1"
sqlmodel = "^0.0.14"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"
elasticsearch = "^8.11.1"
greenlet = "^3.0.3"
aiomysql = "^0.2.0"
cryptography = "^41.0.7"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
faker = "^21.0.0"
httpx = "^0.26.0"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
experimental-string-processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''